deploy/agni-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agni-api
spec:
  selector:
    app: agni-server
  ports:
  - port: 8080
    targetPort: 8080
